# flutter_u2f

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/lib/: main.dart
lib/: hid.dart  u2f.dart
lib/src/: commands.dart  error.dart  log.dart  registration.dart  signature.dart  u2f_base.dart  u2f_nfc.dart
lib/src/hid/: generated_bindings.dart  hid_device.dart  hid_interface.dart  hid_js.dart  hid_vm.dart
lib/src/u2f/: commands.dart  error.dart  nfc_js.dart  registration.dart  signature.dart  u2f.dart  u2f_base.dart  u2f_fido2.dart  u2f_hid.dart  u2f_nfc.dart  u2f_webauthn_js.dart  u2f_webauthn_vm.dart
lib/src/win/: generated_bindings.dart
macos/: ffigen.yaml  u2f.podspec
windows/: CMakeLists.txt  authenticate.c  ffigen.yaml  register.c  u2f.h
